--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Xene</string>
+    <string name="app_name">XENE-user</string>
+    <string name="_91">+91</string>
 </resources>
