--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="navigation_header_deals">Deals</string>
     <string name="navigation_header_email">yashtejwani00@gmail.com</string>
     <string name="navigation_header_messages">Messages</string>
-    <string name="navigation_header_name">Yashwant Tejwani</string>
+    <string name="navigation_header_name"></string>
     <string name="navigation_header_deals_count">5</string>
     <string name="navigation_header_messages_count">2</string>
 
