--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="xene">Xene</string>
+    <string name="xene">XINI</string>
     <string name="app_name">XENE-user</string>
     <string name="_91">+91</string>
     <string name="title_activity_main_navigation">main_activity_navigation</string>
