--- a/xinihostel/src/main/res/values/strings.xml
+++ b/xinihostel/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="card_view_name_of_pg">Name of PG</string>
     <string name="card_view_area_of_pg">Area of PG</string>
     <string name="slide_bar_menu_1">Edit Profile</string>
-    <string name="slide_bar_menu_2">My Deals</string>
+    <string name="slide_bar_menu_2">My Profile</string>
     <string name="slide_bar_menu_3">Help</string>
     <string name="layout_pg_pictures_likeButton_description">add to favourate button</string>
     <string name="layout_pg_pictures_name">Name of pg</string>
